header, reset grid button, and grid-container

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="header">
+        <h1>Etch-a-Sketch</h1>
+        <button id="resetBtn">Reset Grid</button>
+    </div>
+    
+
+    <div class="grid-container">
 
     </div>
 
