--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <div class="header">
         <h1>Etch-a-Sketch</h1>
-        <button id="resetBtn">Reset Grid</button>
+        <div class="buttons">
+            <button id="resetBtn">Reset Grid</button>
+            <button id="eraserBtn">Eraser</button>
+            <button id="penBtn">Regular Pen</button>
+            <button id="magicPenBtn">MagicPen</button>
+        </div>
     </div>
-    
 
     <div class="grid-container">
 
