fixed header formatting and added alert message from js file to here

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div class="header">
-        <h1>Etch-a-Sketch</h1>
-        <div class="buttons">
-            <button id="resetBtn">Reset Grid</button>
-            <button id="eraserBtn">Eraser</button>
-            <button id="penBtn">Regular Pen</button>
-            <button id="magicPenBtn">Magic Pen</button>
+        <div class="header-text">
+            <h1>Etch-a-Sketch</h1>
+            <h3>Click on the Regular Pen or Magic Pen to start Drawing</h3>
+            <div class="buttons">
+                <button id="resetBtn">Reset Grid</button>
+                <button id="eraserBtn">Eraser</button>
+                <button id="penBtn">Regular Pen</button>
+                <button id="magicPenBtn">Magic Pen</button>
+            </div>
         </div>
     </div>
 
