added a change grid size button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <button id="eraserBtn">Eraser</button>
                 <button id="penBtn">Regular Pen</button>
                 <button id="magicPenBtn">Magic Pen</button>
+                <button id="changeGridBtn">Change Grid Size</button>
             </div>
         </div>
     </div>
