--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <h1>Etch-a-Sketch</h1>
             <h3>Click on the Regular Pen or Magic Pen to start Drawing</h3>
             <div class="buttons">
-                <button id="resetBtn">Reset Grid</button>
-                <button id="eraserBtn">Eraser</button>
-                <button id="penBtn">Regular Pen</button>
-                <button id="magicPenBtn">Magic Pen</button>
-                <button id="changeGridBtn">Change Grid Size</button>
+                <button class= "butt" id="resetBtn">Reset Grid</button>
+                <button class= "butt" id="eraserBtn">Eraser</button>
+                <button class= "butt" id="penBtn">Regular Pen</button>
+                <button class= "butt" id="magicPenBtn">Magic Pen</button>
+                <button class= "butt" id="changeGridBtn">Change Grid Size</button>
             </div>
         </div>
     </div>
